--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,297 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --blue: #d7e5F0;
+  --black: #000000;
+  --white: #ffffff;
+  --gray: gainsboro;
+  --header: var(--font-bowlby-sc);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-dm-mono);
+}
+ 
+h1 {
+  font-family: var(--font-bowlby-sc);
+  text-transform: uppercase;
+  line-height: 1.25;
+  font-size: clamp(2rem, 5vw + 1rem, 3.375rem);
+}
+
+h2 {
+  font-family: var(--font-bowlby-sc);
+  text-transform: uppercase;
+  line-height: 1.25;
+  font-size: clamp(1.5rem, 4vw + 0.5rem, 2.5rem);
+}
+
+h3 {
+  font-family: var(--font-bowlby-sc);
+  text-transform: uppercase;
+  line-height: 1.25;
+  font-size: clamp(1.25rem, 1.2vw + 0.5rem, 2rem);
+}
+
+.button-link-style {
+  border: 2px solid var(--black);
+  color: var(--black);
+  background-color: transparent;
+  padding: 8px 10px;
+  gap: 10px;
+  transition: all 0.2s;
+}
+
+.button-link-style:hover {
+  border: 2px solid var(--black);
+  background-color: var(--black);
+  color: var(--white);
+}
+
+.button-link-style:hover svg path {
+  fill: var(--white);
+}
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  padding: 0 15px;
+}
+
+.container-larger {
+  max-width: 1300px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.col {
+  flex: 1;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+
+/* navigations */
+
+.header-nav {
+  padding: 1rem 0;
+}
+
+.header-nav {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+}
+
+.header-logo {
+  width: 150px;
+  max-width: 100%;
+}
+
+.header-nav .row {
+  align-items: center;
+}
+
+.header-nav ul {
+  display: flex;
+  gap: 50px;
+  justify-content: end;
+  padding: 0 25px;
+}
+
+.header-nav nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.header-nav .row .col:first-child {
+  flex: .5;
+}
+
+.header-nav nav a {
+  font-weight: 600;
+}
+
+.header-nav nav a:hover {
+  border-bottom: 2px solid;
+}
+
+.header-nav nav .button-link-style:hover {
+  border-bottom: 2px solid var(--black);
+}
+
+.mobile-menu-btn{
+  display: none;
+}
+
+footer {
+  text-align: center;
+  padding: 75px 0;
+}
+
+.footer-logo {
+  width: 150px;
+  margin: auto;
+}
+
+footer ul {
+  margin-top: 30px;
+  display: inline-flex;
+  gap: 50px;
+}
+
+footer a:hover {
+  border-bottom: 2px solid;
+}
+
+
+/* sections */
+
+section .button-link-style {
+  margin: 0;
+  margin-top: 25px;
+}
+
+.s-01 {
+  background-color: var(--gray);
+  align-content: center;
+  text-align: center;
+}
+
+.s-02 {
+  background-color: whitesmoke;
+  padding: 100px 0;
+}
+
+.s-02 .heading {
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  padding-top: 25px;
+}
+
+.products img {
+  width: 100%;
+}
+
+.skateboard-product > .row > span {
+  flex: 1;
+}
+
+.skateboard-product > .row > span:nth-child(2) {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+
+.skateboard-product .row {
+  justify-content: space-between;
+}
+
+.p-tb {
+  padding: 100px 0;
+}
+
+.s-black {
+  background-color: var(--black);
+  color: var(--white);
+}
+
+.s-black .button-link-style {
+  color: var(--white);
+  border-color: var(--white);
+}
+
+.s-black .button-link-style:hover {
+  background-color: var(--white);
+  border-color: var(--white);
+  color: var(--black);
+}
+
+.s-gray {
+  background-color: gainsboro;
+  color: var(--black);
+}
+
+.s-white {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.s-04 {
+  background-color: gainsboro;
+}
+
+.s-04 h2 {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.skater {
+  margin-top: 25px;
+}
+
+.skater h3 {
+  font-size: 1.5rem;
+}
+
+.skater-info {
+  margin-top: 15px;
+}
+
+.skater-info .mr {
+  margin-right: 5px;
+}
+
+
+/* --------------------------- responsive --------------------------- */
+
+/* Mobile */
+@media (max-width: 767px) {
+  .row {
+    flex-direction: column;
+  }
+  .header-nav .row {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .mobile-hide {
+    display: none !important;
+  }
+  .mobile-menu-btn{
+    display: inline-block;
+  }
+  .products {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/* Tablet */
+@media (min-width: 768px) and (max-width: 991px) {
+  .products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* iPad Pro / Large Tablets */
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* styles for iPad Pro and larger tablets */
+}
+
+/* Larger Screens (optional) */
+@media (min-width: 1200px) {
+  /* styles for large screens */
 }
