Added "about" page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -257,6 +257,14 @@ section .button-link-style {
 }
 
 
+/* pages */
+
+.page-style {
+  padding-top: 150px;
+  padding-bottom: 100px;
+}
+
+
 /* --------------------------- responsive --------------------------- */
 
 /* Mobile */
