--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -286,6 +286,9 @@ article p {
 
 .ft-blog {
   background-color: #1f1f1f;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 
